Added report descriptions and headers for all algorithm notebooks

--- a/ANN.ipynb
+++ b/ANN.ipynb
@@ -14,10 +14,10 @@
    "metadata": {},
    "source": [
     "# Artificial Neural Networks\n",
-    "Artificial neural networks are not a new concept. They have been around for many years.\n",
+    "This Artificial Neural Network(ANN) is composed of an input of 784 greyscale ratings from 0-255 representing each of the pixels in the 28x28 image. The 28x28 array representing the image is linearized to an array of length 784. This gets passed through two layers of 512 neurons each, to get an output of ten nodes, with only one activating to resprent the answer from 0-9. 100 epochs were used for training on 3900 of the 6500 data points to achieve a testing accuracy of 96.12%.\n",
     "\n",
     "## Import Dependencies\n",
-    "We will begin by importing the required packages."
+    "We begin by importing the required packages."
    ]
   },
   {
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get Our Data"
+    "## Load the Data"
    ]
   },
   {
@@ -77,6 +77,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Print Out Example Data\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -99,6 +106,13 @@
     "    plt.subplot(1,num_figures,i+1)\n",
     "    plt.imshow(X_raw[i], cmap='gray', interpolation='none')\n",
     "    plt.title(\"Class {}\".format(y_raw[i]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reshape The Data"
    ]
   },
   {
@@ -144,6 +158,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build Our Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -168,6 +189,13 @@
    "outputs": [],
    "source": [
     "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train the Model"
    ]
   },
   {
@@ -298,13 +326,7 @@
       "3900/3900 [==============================] - 0s 22us/step - loss: 0.0022 - acc: 0.9992 - val_loss: 0.3867 - val_acc: 0.9446\n",
       "Epoch 59/100\n",
       "3900/3900 [==============================] - 0s 22us/step - loss: 0.0012 - acc: 0.9995 - val_loss: 0.3416 - val_acc: 0.9487\n",
-      "Epoch 60/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 60/100\n",
       "3900/3900 [==============================] - 0s 22us/step - loss: 0.0017 - acc: 0.9995 - val_loss: 0.3544 - val_acc: 0.9467\n",
       "Epoch 61/100\n",
       "3900/3900 [==============================] - 0s 21us/step - loss: 0.0029 - acc: 0.9992 - val_loss: 0.3576 - val_acc: 0.9395\n",
@@ -398,6 +420,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate Loss and Accuracy Graphs by Epoch"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -443,6 +472,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Print End Result Accuracy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -461,6 +497,13 @@
     "score = model.evaluate(X_test, Y_test, verbose=1)\n",
     "print('Test score:', score[0])\n",
     "print('Test accuracy:', score[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Display Correct Prediction Examples"
    ]
   },
   {
@@ -501,6 +544,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Display Incorrect Prediction Examples"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -526,18 +576,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Evaluation of Incorrect Prediction\n",
+    "\n",
+    "Above are six examples of the algorithm incorrectly predicting certain numbers within the data given. The neural network had difficulties in determining when a curve or line was connected to another or not, and did not accurately locate smaller gaps between lines (as in the third example, where it assumed an '8' and didn't notice the small gap making it a '2'). It also had trouble recognizing less common ways to write certain numbers. It was correctly able to identify a single vertical line as being a '1', but when written as a typed '1', like in example 4, it failed. The algorithm also could not accurately identify numbers that were blurry or poorly written, as the grayscale had a harder time determining separations between lines, as is the case in the final two examples."
+   ]
   }
  ],
  "metadata": {
@@ -556,7 +601,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
