--- a/Decision Tree.ipynb
+++ b/Decision Tree.ipynb
@@ -17,6 +17,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import Dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -28,6 +35,13 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load the Data"
    ]
   },
   {
@@ -55,6 +69,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Print Out Example Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -77,6 +98,13 @@
     "    plt.subplot(1,num_figures,i+1)\n",
     "    plt.imshow(X_raw[i], cmap='gray', interpolation='none')\n",
     "    plt.title(\"Class {}\".format(y_raw[i]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reshape The Data"
    ]
   },
   {
@@ -145,6 +173,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run Prediction of Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -173,6 +208,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Display Correct Prediction Examples"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -198,6 +240,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Display Incorrect Prediction Examples"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -220,6 +269,15 @@
     "    plt.subplot(1,num_figures,i+1)\n",
     "    plt.imshow(X_test[incorrect].reshape(28,28), cmap='gray', interpolation='none')\n",
     "    plt.title(\"Predicted {}, Class {}\".format(pred_dt[incorrect], y_test[incorrect]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation of Incorrect Prediction\n",
+    "\n",
+    "Compared to the ANN, the decision tree classifier was less accurate and made some more obvious mistakes. It struggled often to identify major features that are similar between two numbers, as example six shows. The algorithm saw the top of the '7' as a downward curve and misinterpreted it as the top of the number '4'. It appears that the Decision Tree algorithm was worse at identifying the general shapes of a lot of numbers if they didn't fit closely to the general style of writing the number, as shown in the first two examples, where the '8' is more slanted and has a gap at the top, and the '0' has a line down the center. "
    ]
   },
   {
@@ -335,11 +393,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Evaluation of Incorrect Random Forest Prediction\n",
+    "\n",
+    "Though the random forest classifier was more accurate than the decision tree classifier, it still struggled to identify some basic features, more commonly the identification of curves as shown in the examples. This algorithm struggled especially with the number '9' both in terms of correctly identifying 9's as well as incorrectly labelling other numbers as 9's. A possible reason could be how it interpreted the length and angle of the curves in some numbers and leading it to false conclusions. "
+   ]
   }
  ],
  "metadata": {
@@ -358,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
