--- a/k-Nearest Neighbors.ipynb
+++ b/k-Nearest Neighbors.ipynb
@@ -17,6 +17,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import Dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -27,6 +34,13 @@
     "from sklearn import neighbors\n",
     "from sklearn.metrics import accuracy_score\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load the Data"
    ]
   },
   {
@@ -54,6 +68,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Print Out Example Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -76,6 +97,13 @@
     "    plt.subplot(1,num_figures,i+1)\n",
     "    plt.imshow(X_raw[i], cmap='gray', interpolation='none')\n",
     "    plt.title(\"Class {}\".format(y_raw[i]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reshape The Data"
    ]
   },
   {
@@ -165,6 +193,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Graph Accuracy and Error per K-value"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
@@ -218,6 +253,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Display Correct Prediction Examples"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -240,6 +282,13 @@
     "    plt.subplot(1,num_figures,i+1)\n",
     "    plt.imshow(X_test[correct].reshape(28,28), cmap='gray', interpolation='none')\n",
     "    plt.title(\"Predicted {}, Class {}\".format(predictions[2][correct], y_test[correct]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Display Incorrect Prediction Examples"
    ]
   },
   {
@@ -268,11 +317,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Evaluation of Incorrect Prediction\n",
+    "\n",
+    "The K-nearest neighbors algorithm was less accurate than the ANN, but more accurate than the Decision Tree classifier. All of the algorithms struggled with poorly written numbers like the fourth and sixth examples here where the lines are blurred, unclear, or improperly intersect. The third example shows a case where the bottom of the two was ignored, possibly because it was not percieved as a distinguished feature. "
+   ]
   }
  ],
  "metadata": {
@@ -291,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
