Changed heading type

--- a/Decision Tree.ipynb
+++ b/Decision Tree.ipynb
@@ -325,7 +325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Random Forest Classifier"
+    "# Random Forest Classifier"
    ]
   },
   {
