Added custom features framework

--- a/DTClassifier.ipynb
+++ b/DTClassifier.ipynb
@@ -539,11 +539,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Adding in Custom Features\n",
+    "We are now going to add in some custom features, including:\n",
+    "* The average value of all the pixels\n",
+    "* Number of features with a value > 0\n",
+    "* TODO: Add more"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def add_custom_features(features):\n",
+    "    new_features = []\n",
+    "    for feature in features:\n",
+    "        tmp_feature = feature\n",
+    "        tmp_feature.append(np.mean(feature))  # Find the average pixel value\n",
+    "        tmp_feature.append(np.count_nonzero(feature))  # Count non-zero values\n",
+    "        new_features.apend(tmp_feature)\n",
+    "    return new_features"
+   ]
   }
  ],
  "metadata": {
