Added documentation to ANN and K-nearest

--- a/ANN.ipynb
+++ b/ANN.ipynb
@@ -49,7 +49,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load the Data"
+    "## Load the Data\n",
+    "\n",
+    "Data is loaded from the files available on the course canvas website."
    ]
   },
   {
@@ -83,7 +85,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Print Out Example Data\n"
+    "## Print Out Example Data\n",
+    "\n",
+    "Below we print out 6 visual examples of what the data expects our algorithms to look for. The pictures are a 28 x 28 grid of greyscale pixels, with a given 'class' for each of them, reporting what actual number each image is. "
    ]
   },
   {
@@ -115,7 +119,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reshape The Data"
+    "## Reshape The Data\n",
+    "\n",
+    "The data is then split into Training, Validation and Testing sets, divided accordingly from the assignment's suggestions. "
    ]
   },
   {
@@ -198,7 +204,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train the Model"
+    "## Train the Model\n",
+    "\n",
+    "Below 100 epochs of the model are run with a batch size of 128. The time, loss and accuracy are recorded per epoch, alongside the validation set's loss and accuracy. Each of these values was consistent, the time per epoch averaged ~170 milliseconds and the overall accuracy of the model was improved to be nearly perfect by the end of the epochs. "
    ]
   },
   {
@@ -432,7 +440,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate Loss and Accuracy Graphs by Epoch"
+    "## Generate Loss and Accuracy Graphs by Epoch\n",
+    "\n",
+    "Below we graph the accuracy and loss per epoch for our Artificial Neural Network. Halfway through the program, the accuracy of the middle epochs had a dip in its consistency, however the lowest value was just over 94%, which is an impressive lowest value. "
    ]
   },
   {
@@ -669,7 +679,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Print End Result Accuracy"
+    "## Print End Result Accuracy\n",
+    "\n",
+    "Overall, our ANN's accuracy on the testing set finished at 99.19%, giving a conclusive success on our model's algorithm. \n",
+    "\n",
+    "Further below is a confusion matrix demonstrating our model's prediction score. It shows that it was very consistent throughout the entire run. "
    ]
   },
   {
@@ -831,7 +845,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
