--- a/k-Nearest Neighbors.ipynb
+++ b/k-Nearest Neighbors.ipynb
@@ -13,7 +13,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# K-Nearest Neighbors"
+    "# K-Nearest Neighbors\n",
+    "\n",
+    "This section covers our group's implementation of the K-nearest neighbors model, following the same setup and procedure as previous sections. We found that our algorithm was most accurate at a K-value of 2, and the overall performance was decidedly better than the Decision tree model, and slightly less accurate than the ANN model. "
    ]
   },
   {
@@ -217,14 +219,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot error and accruacy vs. k-range"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Graph Accuracy and Error per K-value"
+    "## Graph Accuracy and Error per K-value\n",
+    "\n",
+    "Below we have the accuracy and error graphs of the program iterating over 10 k-values. It was found that the model performed best at a value of 2 with an accuracy of 94.7%, and averaged around 93.5% for other values."
    ]
   },
   {
@@ -375,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
