Please work I want to die (copied intros in)

--- a/ANN.ipynb
+++ b/ANN.ipynb
@@ -14,7 +14,8 @@
    "metadata": {},
    "source": [
     "# Artificial Neural Networks\n",
-    "TODO: Give an introduction to ANNs."
+    "\n",
+    "Artificial Neural Networks are a computational model based around biological neural networks such as the human brain. These ANNs take input data and this data is divided into categories with different weights assigned onto them, steering through neurons depending on their properties. These networks learn based on the outputs from the neurons they are given and can eventually create very accurate predictions of data sets. In this section our group creates our own ANN model and run multiple epochs to hone the network's skill in correct image recognition. "
    ]
   },
   {
@@ -176,7 +177,7 @@
    "metadata": {},
    "source": [
     "## Build Our Model\n",
-    "TODO: Add a description of our model."
+    "For our neural network model, it is initially given an input layer of 784 nodes, then passes through two hidden layers of 512 ndoes, eventually reaching an output layer of 10 nodes, each of the final nodes representing a class between 0-9 to represent the numbers of the images. "
    ]
   },
   {
@@ -917,7 +918,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
