--- a/DTClassifier.ipynb
+++ b/DTClassifier.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "# Decision Tree Classifier\n",
-    "TODO: Give an introduction to what a decision tree classifier is."
+    "The decision tree algorithm that employs a tree of decisions to classify an input. Each node of the tree corresponds to a feature that gives insight as to what classification the input could or could not be. Multiple features are thus used to differentiate inputs. For our dataset, the model is trained by examining how combinations of features relate to the known classification of an input. The best depth for our tree was at depth 69 with a test accuracy of 78.8%."
    ]
   },
   {
@@ -164,7 +164,7 @@
    "metadata": {},
    "source": [
     "## Default Decision Tree Classifier\n",
-    "Here we setup the decision tree classifier and fit it to the *X_train* and *y_train* datasets. For this first test we use the default properties. "
+    "Here we setup the decision tree classifier and fit it to the *X_train* and *y_train* datasets. For this first test we use the default properties. For this classifier we used the default settings; Gini for split quality measurement, Best for node split strategy, and no max depth. "
    ]
   },
   {
@@ -594,7 +594,8 @@
    "metadata": {},
    "source": [
     "### Use the Best Depth\n",
-    "From the above analysis, we create a decision tree at the best depth and run a prediction on the test data sets."
+    "\n",
+    "From the above analysis, we create a decision tree at the best depth and run a prediction on the test data sets. This classifier uses the best depth calculated above of `69`. "
    ]
   },
   {
@@ -1107,7 +1108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
