--- a/k-Nearest Neighbors.ipynb
+++ b/k-Nearest Neighbors.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# K-Nearest Neighbors\n",
     "\n",
-    "This section covers our group's implementation of the K-nearest neighbors model, following the same setup and procedure as previous sections. TODO: Add more about k-nearest."
+    "K-nearest neighbors is a simple form of machine learning where the function is approximated locally, and the input consists of the 'k'-closest training examples in the data set. For our group's K-nearest model, we experimented from 1 - 10 neighbors to give a variety of lengths that the model can operate on. From these experiments, we found that our model perfomred best at a k-value of 3 with 94.7% accuracy. This section covers our group's implementation of the K-nearest neighbors model, following the same setup and procedure as previous sections. "
    ]
   },
   {
@@ -451,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
